# deferred_heap

./: .gitignore  CMakeLists.txt  README.md
doc/: readme_example_1  readme_example_2  readme_example_3  readme_example_4
include/deferred/: deferred_heap  deferred_ptr  defines  is_deferred_base_of  root_ptr  simple_allocator  visitor
include/deferred/detail/: class_member_info.hpp  deferred_heap.hpp  deferred_heap_impl.hpp  deferred_ptr.hpp  deferred_simple_allocator.hpp  deferred_type_defines.hpp  deferred_type_helper.hpp  deferred_type_helper_impl.hpp  deferred_type_traverse_helper.hpp  identity.hpp  is_container.hpp  is_deferred_base_of.hpp  is_deferred_ptr.hpp  memory_chunk_header.hpp  root_ptr.hpp  root_ptr_base.hpp  scan_for_parents.hpp  static_class_counter.hpp  support_visitor.hpp  visitor.hpp
src/: deferred_heap.cpp  deferred_simple_allocator.cpp  deferred_type_helper.cpp  memory_chunk_header.cpp  root_ptr_base.cpp  visitor.cpp
test/: CMakeLists.txt  deferred_heap.cpp  simple_allocator.cpp  traits.cpp
test/googletest/: CMakeLists.txt.in
